deployment/app_deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: tefa-sewayuk-kelompok-1
  labels:
    app: tefa-sewayuk-kelompok-1
spec:
  replicas: 2
  selector:
    matchLabels:
      app: tefa-sewayuk-kelompok-1
  template:
    metadata:
      name: tefa-sewayuk-kelompok-1
      labels:
        app: tefa-sewayuk-kelompok-1
    spec:
      containers:
        - name: tefa-sewayuk-kelompok-1
          image: shadif/tefa-sewayuk-kelompok-1
          ports:
            - containerPort: 9000
          resources:
            limits:
              memory: "128Mi"
              cpu: "500m"
---
apiVersion: v1
kind: Service
metadata:
  name: tefa-sewayuk-kelompok-1-service
spec:
  selector:
    app: tefa-sewayuk-kelompok-1
  ports:
  - port: 80
    targetPort: 9000

---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: tefa-sewayuk-kelompok-1-ingress
  labels:
    app: tefa-sewayuk-kelompok-1-ingress
spec:
  rules:
  - host: tefa-sewayuk-kelompok-1.shadif.local
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: tefa-sewayuk-kelompok-1-service
            port: 
              number: 80
# Uncomment kalo config diatas sudah berhasil
# ---
# apiVersion: autoscaling/v2
# kind: HorizontalPodAutoscaler
# metadata:
#   name: tefa-sewayuk-kelompok-1-hpa
# spec:
#   minReplicas: 3
#   maxReplicas: 5
#   scaleTargetRef:
#     apiVersion: apps/v1
#     kind: Deployment
#     name: tefa-sewayuk-kelompok-1
#   metrics:
#     - type: Resource
#       resource:
#         name: cpu
#         target:
#           type: Utilization
#           averageUtilization: 70
#     - type: Resource
#       resource:
#         name: memory
#         target:
#           type: Utilization
#           averageUtilization: 70
